# LLM-AS-A-JUDGE-

./: README.md  evaluation_result_20240826_114055.txt  evaluation_result_20240826_115802.txt  evaluation_result_20240826_123831.txt  evaluation_result_20240827_134738.txt  evaluation_result_20240827_135159.txt  llm.as.a.judge.ipynb  llm.as.a.judge2.ipynb  pyproject.toml  run.py  validation.ipynb  validation.py
src/llm_as_a_judge/: __init__.py  attack_path_evaluator.py  config.py  main.py  prompt_template.py  test_outputs.py
