[project]
name = "llm-as-a-judge"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "python-dotenv>=1.0.1",
    "ipykernel>=6.29.5",
    "langchain>=0.2.12",
    "langchain-openai>=0.1.20",
    "openai>=1.40.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_as_a_judge"]


